// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormFooter/> should render children positions 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should render children positions 2`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  >
    My-Children-Component
  </div>
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should render children positions 3`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    type="submit"
  >
    FormFooter/save
  </button>
  My-Children-Component
</div>
`;

exports[`<FormFooter/> should render children positions 4`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  My-Children-Component
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should render children positions 5`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  >
    My-Children-Component
  </div>
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should render children positions 6`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  My-Children-Component
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "cancelIsReset" option 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    disabled=""
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "canceling" state 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    disabled=""
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "deleting" state 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    disabled=""
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "ready" state 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    type="submit"
  >
    FormFooter/save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "ready" state when isUpdate 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    type="submit"
  >
    FormFooter/update
  </button>
</div>
`;

exports[`<FormFooter/> should validate "saving" state 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    disabled=""
    type="submit"
  >
    FormFooter/saving
  </button>
</div>
`;

exports[`<FormFooter/> should validate "saving" state when cancelIsReset is false 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    disabled=""
    type="submit"
  >
    FormFooter/saving
  </button>
</div>
`;

exports[`<FormFooter/> should validate "saving" state when cancelIsReset is true 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    disabled=""
    type="submit"
  >
    FormFooter/saving
  </button>
</div>
`;

exports[`<FormFooter/> should validate "saving" state when isUpdate 1`] = `
<div
  class="formFooter lensUi__FormFooter"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default lensUi__Button formFooterButton"
    disabled=""
    type="submit"
  >
    FormFooter/updating
  </button>
</div>
`;
